--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,9 @@
 }
 #home_image {
     width: 500px;
-    margin-left: 500px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 body {
     /* background-color: black; */
@@ -64,6 +66,9 @@ p {
 }
 #cat_bag_mask {
     width: 498px;
+    display: inline;
+    margin-left: auto;
+    margin-right: auto;
 }
 #stylish_bag_man {
     width: 390px;
