--- a/styles.css
+++ b/styles.css
@@ -6,25 +6,33 @@
     z-index: 100;
     font-size: x-large;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    height: 100px;
+    height: 120px;
     text-align: center;
 }
 .header nav {
-    margin-right: 320px;
+    float: right;
+    margin-right: 50px;
 }
 .header nav a {
-    margin: 0 10px;
+    margin: 0 20px;
     text-decoration: none;
     color: black;
+    font-weight: 450;
 }
 .header nav a:hover {
     color: white;
     text-decoration: underline;
-}  
+}
 #header_logo {
     width: 200px;
-    margin-left: 150px;
+    margin-left: 50px;
     float: left;
+}
+.header_name {
+    text-align: left;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 500;
+    font-size: 35px;
 }
 #home_image {
     width: 500px;
@@ -39,17 +47,12 @@
     background-color: black;
     color: white;
 }
-.heading_text_2 {
+.heading_text {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 40px;
     text-align: center;
 }
-h2 {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 50px;
-    text-align: center;
-}
-p {
+.body_text {
     color: black;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 30px;
@@ -61,10 +64,12 @@ p {
 .image_group1 {
     width: 100%;
     text-align: center;
+    margin-top: 60px;
 }
 .image_group2 {
     width: 100%;
     text-align: center;
+    margin-bottom: 60px;
 }
 #cool_bag_man {
     width: 400px;
@@ -92,4 +97,23 @@ p {
     width: 370px;
     height: 580px;
     display: inline-block;
+}
+.page_background {
+    background-color: lightgray;
+}
+.text_background {
+    background-color: rgb(168, 168, 168);
+    background-size: 0px 100px;
+}
+#ending {
+    margin-bottom: 100px;
+}
+#team_image {
+    width: 800px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+#oldie_bag_mask {
+    width: 700px;
 }
